Fix front page image width on mobile

--- a/doc/website/static/css/custom.css
+++ b/doc/website/static/css/custom.css
@@ -7,5 +7,6 @@
 }
 
 #screencast {
+  width: 100%;
   max-width: 45em;
 }
